style.css
body {
	background: #eaeaea;
	padding-top: 40px;
}

.clearfix {
	display: block;
	clear: both;
	height: 0;
	width: 100%;
}

a:link, a:visited {
	color: #8d6aab;
}

a:hover, a:active {
	color: #73558c;
}

.navbar-inverse {
	background-color: #8d6aab;
	border-color: #73558c;
}

.navbar-inverse .navbar-brand,
.navbar-inverse .navbar-nav>li>a {
	color: #cdafe7;
}

.timeline {
	background: url('timeline.gif') repeat-y top;
}

.timestamp {
	text-align: center;
}

h2.timestamp .date,
h3.timestamp .date {
	display: inline-block;
	background: #eaeaea;
	color: #8d6aab;
	line-height: 42px;
	border-top: 4px solid #d1d1d1;
	border-bottom: 4px solid #d1d1d1;
}

h4.timestamp .date {
	display: inline-block;
	background: #eaeaea;
	color: #d1d1d1;
	width: 50px;
	height: 50px;
	line-height: 42px;
	border-radius: 25px;
	border: 4px solid #d1d1d1;
}

.timestamp .date sup {
	/*display: none;*/
}

.status {
	position: relative;
	background: #fff;
	border-radius: 5px;
	padding: 15px;
	box-shadow: 0 2px 0 #d1d1d1;
}

.post + .post {
	margin-top: -20px;
}

.post > .status::after {
	content: "";
	position: absolute;
	top: 50%;
	right: -13px;
	margin-top: -13px;
	border-width: 13px 0 13px 13px;
	border-style: solid;
	border-color: transparent transparent transparent white;
	display: block;
	width: 0;
}

.post.alt > .status::after {
	content: "";
	position: absolute;
	top: 50%;
	left: -13px;
	margin-top: -13px;
	border-width: 13px 13px 13px 0;
	border-style: solid;
	border-color: transparent white transparent transparent;
	display: block;
	width: 0;
}

.post > .status::before {
	-webkit-transition: all 0.1s ease-in-out;
	content: "";
	width: 12px;
	height: 12px;
	position: absolute;
	top: 50%;
	right: -21px;
	margin-top: -6px;
	border-radius: 6px;
	background-color:#d1d1d1;
}

.post.alt > .status::before {
	left: -21px;
}

.post:hover > .status::before {
	-moz-transform: scale(2);
	-webkit-transform: scale(2);
}

.status .body {
	padding-left: 63px;
}

.status .avatar {
	float: left;
}

.replies .status {
	margin-top: 10px;
}

.loadmore {
	text-align: center;
	margin: 40px 0;
}

